[gd_scene load_steps=21 format=2]

[ext_resource path="res://scenes/ship.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/Minecraft.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/game_manager.gd" type="Script" id=3]
[ext_resource path="res://scripts/astroid_spawner.gd" type="Script" id=4]
[ext_resource path="res://fonts/main_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://scripts/line_edit_force_caps.gd" type="Script" id=6]
[ext_resource path="res://fonts/leaderboard_scores_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://scenes/selection_arrows.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[node name="Game" type="Node"]
script = ExtResource( 3 )

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ship" parent="." instance=ExtResource( 1 )]
position = Vector2( 180, 550 )
speed = 250

[node name="AsteroidSpawner" type="Timer" parent="."]
autostart = true
script = ExtResource( 4 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 20.0
margin_top = 16.0279
margin_right = 340.0
margin_bottom = 40.0279
custom_fonts/font = ExtResource( 5 )
text = "Score: ##"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathMessage" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathMessageLabel" type="Label" parent="DeathMessage"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -92.0
custom_fonts/font = SubResource( 1 )
text = "- YOU DIED! -

FINAL SCORE: ###"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnterName" type="LineEdit" parent="DeathMessage"]
anchor_left = 0.15
anchor_top = 0.61
anchor_right = 0.85
anchor_bottom = 0.7
margin_left = 45.0
margin_top = -41.4
margin_right = -42.0
margin_bottom = -41.0
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
max_length = 4
selecting_enabled = false
placeholder_text = "NAME"
placeholder_alpha = 1.0
caret_blink = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnterNameBorder" type="Line2D" parent="DeathMessage/EnterName"]
position = Vector2( 81, 26 )
points = PoolVector2Array( -75, -25, 75, -25, 75, 25, -75, 25, -75, -25 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )
begin_cap_mode = 1

[node name="NameSelectionArrows" parent="DeathMessage/EnterName" instance=ExtResource( 8 )]
visible = false
position = Vector2( 81, 26.2694 )

[node name="Left" parent="DeathMessage/EnterName/NameSelectionArrows" index="0"]
position = Vector2( -100, 0 )

[node name="Right" parent="DeathMessage/EnterName/NameSelectionArrows" index="1"]
position = Vector2( 100, 0 )

[node name="RetryBTN" type="Button" parent="DeathMessage"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -181.324
margin_right = -29.0
margin_bottom = -133.324
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "RETRY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetrySelectionArrows" parent="DeathMessage/RetryBTN" instance=ExtResource( 8 )]
visible = false
position = Vector2( 150, 20.7299 )

[node name="Left" parent="DeathMessage/RetryBTN/RetrySelectionArrows" index="0"]
position = Vector2( -72.9719, -0.340576 )

[node name="Right" parent="DeathMessage/RetryBTN/RetrySelectionArrows" index="1"]
position = Vector2( 71.6648, 0 )

[node name="BackBTN" type="Button" parent="DeathMessage"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -125.0
margin_right = -29.0
margin_bottom = -77.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackSelectionArrows" parent="DeathMessage/BackBTN" instance=ExtResource( 8 )]
visible = false
position = Vector2( 150, 22.0671 )

[node name="Left" parent="DeathMessage/BackBTN/BackSelectionArrows" index="0"]
position = Vector2( -58.7615, -0.340576 )

[node name="Right" parent="DeathMessage/BackBTN/BackSelectionArrows" index="1"]
position = Vector2( 59.5076, 0 )
[connection signal="focus_entered" from="DeathMessage/EnterName" to="DeathMessage/EnterName/NameSelectionArrows" method="show"]
[connection signal="focus_exited" from="DeathMessage/EnterName" to="DeathMessage/EnterName/NameSelectionArrows" method="hide"]
[connection signal="text_entered" from="DeathMessage/EnterName" to="DeathMessage/RetryBTN" method="grab_focus"]
[connection signal="focus_entered" from="DeathMessage/RetryBTN" to="DeathMessage/RetryBTN/RetrySelectionArrows" method="show"]
[connection signal="focus_exited" from="DeathMessage/RetryBTN" to="DeathMessage/RetryBTN/RetrySelectionArrows" method="hide"]
[connection signal="pressed" from="DeathMessage/RetryBTN" to="." method="_on_retry"]
[connection signal="focus_entered" from="DeathMessage/BackBTN" to="DeathMessage/BackBTN/BackSelectionArrows" method="show"]
[connection signal="focus_exited" from="DeathMessage/BackBTN" to="DeathMessage/BackBTN/BackSelectionArrows" method="hide"]
[connection signal="pressed" from="DeathMessage/BackBTN" to="." method="_on_back"]

[editable path="DeathMessage/EnterName/NameSelectionArrows"]

[editable path="DeathMessage/RetryBTN/RetrySelectionArrows"]

[editable path="DeathMessage/BackBTN/BackSelectionArrows"]
